--- a/DOM_color_tweaker.html
+++ b/DOM_color_tweaker.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="utf-8">
-	<title>DOM Color Tweaker</title>
+	<title>DOM Color Tweaker From Home PC</title>
 	<style>
 		body {
 			font-family:"Trebuchet MS", Segoe, sans-serif;
@@ -25,7 +25,7 @@
 </head>
 <body>
 	<div>
-		Click the button repeatedly to change the box color:
+		Click the button repeatedly to change the box color Version 2:
 	</div>
 	
 	<button id="btn">Click me!</button>
