Edited the string from another PC

--- a/DOM_color_tweaker.html
+++ b/DOM_color_tweaker.html
@@ -25,7 +25,7 @@
 </head>
 <body>
 	<div>
-		Click the button repeatedly to change the box color:
+		Click the button repeatedly to change the box color whoops a different version:
 	</div>
 	
 	<button id="btn">Click me!</button>
